refactor: implement Atomic design
